little text on mainpage
q

--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -37,7 +37,7 @@
 		</h3>
 
 		<h3>
-		To start a workout, select FLOW from the menu and pick your level.
+		To start a workout, select FLOW from the menu and pick your level. If you are new to yoga, or to our app, we recommend you start with the novice flow. Once you are more experienced, feel free to try the yogi flow.
 		</h3>
 
 		<h3>
