--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 			<span class="glyphicon glyphicon-question-sign"></span> Need Help</a>
       	</h1>
 		<h1 id="hProfile">PROFILE</h1>
-		<!-- <h1 id="mySet"><a href='/settings'> 
+		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1> -->
 <!--       	<div class= hamburger>
@@ -84,21 +84,25 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	</div>
 
 	<div class ="calender">
-		<img src="/calender.jpg" alt="Calender" width=320px height=300px">
+		<img src="/calender.jpg" alt="Calender" width=320px height=300px>
 	</div>
 
 	<br></br>
-
 	<div>
+		<h3>
+		Welcome to uFlow! This is a Yoga app for people of all experiences. Navigate to the "Flow" section to begin your Yoga session. 
+		</h3>
+	</div>
+	<!-- <div>
 	<table style= "width:100%">
-	<!-- <tr>
+	<tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
 		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
 	</table>
-	</div> -->
-
+	</div>
+ -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/ham.js"></script>
