--- a/views/index_B.handlebars
+++ b/views/index_B.handlebars
@@ -50,14 +50,18 @@
 	</div>
 
 	<div class ="calender">
-		<img src="/calender.jpg" alt="Calender" width=320px height=300px">
+		<img src="/calender.jpg" alt="Calender" width=320px height=300px>
 	</div>
 
 	<br></br>
-
 	<div>
+		<h3>
+		Welcome to uFlow! This is a Yoga app for people of all experiences. Navigate to the "Flow" section to begin your Yoga session. 
+		</h3>
+	</div>
+	<!-- <div>
 	<table style= "width:100%">
-	<!-- <tr>
+	<tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
 		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
