--- a/views/index_B.handlebars
+++ b/views/index_B.handlebars
@@ -19,7 +19,7 @@
 		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1> -->
-      	<div class= 'hamburger'>
+      	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
