fixed js stuff for click check

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -61,7 +61,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	      			<li><a href= '/index'>PROFILE</a></li>
     	  			<li><a href= '/flow'>FLOW</a></li>
       				<li><a href= '/poses'>POSES</a></li>
-      				<li id = "lHelp"><a href= '/help'>HELP</a></li>
+      				<li id="lHelp"><a href= '/help'>HELP</a></li>
       				<li><a href= '/'>LOGOUT</a></li> 
       			</ul>
       		</div>
@@ -107,6 +107,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/ham.js"></script>
+	<script src="js/index.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
