--- a/views/index_B.handlebars
+++ b/views/index_B.handlebars
@@ -72,7 +72,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/ham.js"></script>
-	<script type="js/index_B.js"></script>
+	<script src="js/index_B.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
