added sanskrit, fixed routing

--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -62,6 +62,6 @@
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/uflow.js"></script>
+	<script src="js/ham.js"></script>
 </body>
 </html>
