--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -24,7 +24,7 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href='/flow'>FLOW</a></li>
       			<li><a href='/poses'>POSES</a></li>
-      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li><a href= '/help'>HELP</a></li>
       			<li><a href= '/'>LOGOUT</a></li>
       		</ul>
       	</div>
@@ -33,6 +33,7 @@
 
 	{{#each poses}}
 	<h6><center>{{name}}</center></h6>
+	<h2><center>{{sanskrit}}</center></h2>
 	<hr><center><img width= "200" height= "200" src= "{{imgURL}}"></center></hr>
 	<hr><center><iframe width="300" height="315" src="{{videoURL}}"></iframe></center></hr>
 	{{/each}}
