--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -27,7 +27,7 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href='/flow'>FLOW</a></li>
       			<li><a href='/poses'>POSES</a></li>
-      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li><a href= '/help'>HELP</a></li>
       			<li><a href= '/'>LOGOUT</a></li>
       			<!-- <li><a href='/vnoviceplay'>vnoviceplay</a></li>
       			<li><a href='/vyogiplay'>vyogiplay</a></li> -->
