made changes to the help page and main page text, moved some breath info to flow page instead of help page

--- a/public/css/uFlow.css
+++ b/public/css/uFlow.css
@@ -68,11 +68,15 @@ h6{
 	display: inline-block;
 }
 .info{
-	
+	padding: 0px 25px 0px 25px;
 }
 #QBreath{
 	float: left;
 	padding: 50px 0px 0px 50px;
+}
+#EBreath{
+	float: left;
+	padding: 0px 0px 0px 50px;
 }
 #myBreath{
 	float: left;
