--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -31,24 +31,27 @@
 	</div>
 	</header>
 
+	<br>
 	<div class= "info">
+		<h2>WHAT IS YOGA?</h2>
 		<h3>
 		Yoga is a Hindu spiritual discipline, including breath control, simple meditation, and the adoption of specific bodily postures ॐ
 		</h3>
-
+		<br>
+		<h2>WHAT IS A FLOW?</h2>
 		<h3>
 		To start a workout, select FLOW from the menu and pick your level. If you are new to yoga, or to our app, we recommend you start with the novice flow. Once you are more experienced, feel free to try the yogi flow.
 		</h3>
-
+		<br>
+		<h2>WHY IS THE BREATH CYCLE IMPORTANT?</h2>
 		<h3>
-		We ask for your breath cycle so that you can be mindful of your breath and how it changes ॐ
-		Breath cycle= inhale time (seconds)+ exhale time (seconds) 
+		We ask for your breath cycle so that you can be mindful of your breath and how it changes ॐ 
 		</h3>
-
+		<br>
+		<h2>WHAT IF I DON'T KNOW THE POSES?</h2>
 		<h3>
 		If you need more guidance in the postures, consult the Poses pageॐ
 		</h3>
-
 	</div>
 	
 	</div>
