--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
 
 <body>
 	<div class= "curmenu">
-		<h1 id="hLogin">WELCOME TO UFLOW</h1>
+		<h1 id="hLogin">UFLOW</h1>
 	</div>
 
 	<div class="form">
