--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -36,6 +36,7 @@
 
 	<div>
 		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
+		<h5 id = "EBreath"> Breath cycle= inhale time (seconds)+ exhale time (seconds)</h5>
 		<h1 id= "myBreath">
 		<form action="/action_page.php">
  		 	<select id = "time" name="time">
