--- a/views/index_B.handlebars
+++ b/views/index_B.handlebars
@@ -12,7 +12,7 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id="bHelp"><a href='/help' class= "btn btn-info btn-lg"> 
+		<h1 id="bHelp"><a href='/help' class= "btn btn-default btn-m"> 
 			<span class="glyphicon glyphicon-question-sign"></span> Need Help</a>
       	</h1>
 		<h1 id="hProfile">PROFILE</h1>
@@ -24,11 +24,11 @@
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
-      			<li><a href= '/index'>PROFILE</a></li>
-      			<li><a href= '/flow'>FLOW</a></li>
-      			<li><a href= '/poses'>POSES</a></li>
+      			<li><a href= '/index' style= "color: black;">PROFILE</a></li>
+      			<li><a href= '/flow' style= "color: black;">FLOW</a></li>
+      			<li><a href= '/poses' style= "color: black;">POSES</a></li>
       		<!-- 	<li><a href= '/help'>HELP</a></li> -->
-      			<li><a href= '/'>LOGOUT</a></li> 
+      			<li><a href= '/' style= "color: black;">LOGOUT</a></li> 
       		</ul>
       	</div>
 	</div>
@@ -53,12 +53,11 @@
 		<img src="/calender.jpg" alt="Calender" width=320px height=300px>
 	</div>
 
-	<br></br>
-	<div>
+	<!-- <div>
 		<h3>
 		Welcome to uFlow! This is a Yoga app for people of all experiences. Navigate to the "Flow" section to begin your Yoga session. 
 		</h3>
-	</div>
+	</div> -->
 	<!-- <div>
 	<table style= "width:100%">
 	<tr>
