--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,9 +10,12 @@
 
 <body>
 	<div class= "curmenu">
-		<h1 id="hLogin">UFLOW</h1>
+		<h1 id="hLogin">uFLOW</h1>
 	</div>
-
+	<br>	
+	<div class= "welcome">
+		<h4>Welcome to uFlow! This is a Yoga app for people of all experiences. Login and select your "Flow" level to begin your session.</h4>	
+	</div>
 	<div class="form">
 		<label for="user">Name:</label>
 		<input type="text" class="form-control" id="user" placeholder="Enter Username">
@@ -26,7 +29,7 @@
 		<label><input type="checkbox">Remember me</label>
 	</div>
 	<div class="enter">
-		<a href="/index" type="button" class="btn btn-default">Enter</a>
+		<a href="/flow" type="button" class="btn btn-default">Enter</a>
 	</div>
 
 </body>
