--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -24,11 +24,11 @@
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
-      			<li><a href= '/index'>PROFILE</a></li>
-      			<li><a href='/flow'>FLOW</a></li>
-      			<li><a href='/poses'>POSES</a></li>
-      			<li><a href= '/help'>HELP</a></li>
-      			<li><a href= '/'>LOGOUT</a></li>
+      			<li><a href= '/index' style= "color: black;">PROFILE</a></li>
+      			<li><a href='/flow' style= "color: black;">FLOW</a></li>
+      			<li><a href='/poses' style= "color: black;">POSES</a></li>
+      			<li><a href= '/help' style= "color: black;">HELP</a></li>
+      			<li><a href= '/ ' style= "color: black;">LOGOUT</a></li>
       		</ul>
       	</div>
 	</div>
