--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,11 +58,11 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
       			<div class= hammenu></div>
       			<div class= hammenu></div>
       			<ul class= "myMenu">
-	      			<li><a href= '/index'>PROFILE</a></li>
-    	  			<li><a href= '/flow'>FLOW</a></li>
-      				<li><a href= '/poses'>POSES</a></li>
-      				<li id="lHelp"><a href= '/help'>HELP</a></li>
-      				<li><a href= '/'>LOGOUT</a></li> 
+	      			<li><a href= '/index' style= "color: black;">PROFILE</a></li>
+    	  			<li><a href= '/flow' style= "color: black;">FLOW</a></li>
+      				<li><a href= '/poses' style= "color: black;">POSES</a></li>
+      				<li id="lHelp"><a href= '/help' style= "color: black;">HELP</a></li>
+      				<li><a href= '/' style= "color: black;">LOGOUT</a></li> 
       			</ul>
       		</div>
 		</div>
@@ -88,12 +88,11 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 		<img src="/calender.jpg" alt="Calender" width=320px height=300px>
 	</div>
 
-	<br></br>
-	<div>
+	<!-- <div>
 		<h3>
 		Welcome to uFlow! This is a Yoga app for people of all experiences. Navigate to the "Flow" section to begin your Yoga session. 
 		</h3>
-	</div>
+	</div> -->
 	<!-- <div>
 	<table style= "width:100%">
 	<tr>
