changed color scheme a bit more

--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -33,7 +33,7 @@
 
 	{{#each poses}}
 	<h6><center>{{name}}</center></h6>
-	<h2><center>{{sanskrit}}</center></h2>
+	<h2 style= "color: #46D9E3;"><center>{{sanskrit}}</center></h2>
 	<hr><center><img width= "200" height= "200" src= "{{imgURL}}"></center></hr>
 	<hr><center><iframe width="300" height="315" src="{{videoURL}}"></iframe></center></hr>
 	{{/each}}
