changed index colors

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -73,15 +73,18 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	
 	<table style= "width: 100%">
 	<tr>
-		<td><h4>FLOWS DONE: {{flowsdone}}</h4></td>
-		<td><h4>YOGA TIME: {{yogatime}} min</h4></td>
-		<td><h4>BREATH CYCLE: {{breathCycle}}</h4></td>
+		<td><h4 style= "color: #46D9E3;">FLOWS DONE:</h4> 
+			<h4>{{flowsdone}}</h4></td>
+		<td><h4 style= "color: #46D9E3;">YOGA TIME:</h4> 
+			<h4>{{yogatime}} min</h4></td>
+		<td><h4 style= "color: #46D9E3;">BREATH CYCLE:</h4> 
+			<h4>{{breathCycle}}</h4></td>
 	</tr>
 	</table>
 	</div>
 
 	<div>
-		<h2>FLOW HISTORY</h2>
+		<h2 style= "color: #46D9E3;">FLOW HISTORY</h2>
 	</div>
 
 	<div class ="calender">
