--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
 	</div>
 	<br>	
 	<div class= "welcome">
-		<h4>Welcome to uFlow! This is a Yoga app for people of all experiences. Login and select your "Flow" level to begin your session.</h4>	
+		<h4>Welcome to uFlow! Let our audio guided yoga allow your gaze to go inwards</h4>	
 	</div>
 	<div class="form">
 		<label for="user">Name:</label>
@@ -25,9 +25,9 @@
 		<label for="pass">Password:</label>
 		<input type="text" class="form-control" id="pass" placeholder="Enter password">
 	</div>
-	<div class="checkbox">
+	<!-- <div class="checkbox">
 		<label><input type="checkbox">Remember me</label>
-	</div>
+	</div> -->
 	<div class="enter">
 		<a href="/flow" type="button" class="btn btn-default">Enter</a>
 	</div>
