--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -35,8 +35,8 @@
 	</header>
 
 	<div>
-		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
-		<h5 id = "EBreath"> Breath cycle= inhale time (seconds)+ exhale time (seconds)</h5>
+		<h1 id= "QBreath">How Long Is Your Breath Cycle? :</h1>
+		<h3 id = "EBreath" style = "color: #46D9E3;"> Breath cycle = inhale time (seconds) + exhale time (seconds)</h>
 		<h1 id= "myBreath">
 		<form action="/action_page.php">
  		 	<select id = "time" name="time">
@@ -47,7 +47,7 @@
   			</select>
 		</form>
 		<br>
-		<p> Click play to begin your audio guided flow </p>
+		<p> <font size = "5"> Begin your audio guided flow and focus your gaze inward </font></p>
 	</div>
 
 	<div class= "myPlay">
