--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -35,7 +35,7 @@
 	</header>
 
 	<div>
-		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
+		<h1 id= "QBreath">How Long Is Your Breath Cycle? :</h1>
 		<h5 id = "EBreath"> Breath cycle= inhale time (seconds)+ exhale time (seconds)</h5>
 		<h1 id= "myBreath">
 		<form action="/action_page.php">
