--- a/public/css/uFlow.css
+++ b/public/css/uFlow.css
@@ -12,7 +12,7 @@ h6{
 	font-size: 250%;
 }
 body{
-	font: normal 10px Verdana, Arial, sans-serif;
+	/*font: normal 10px Verdana, Arial, sans-serif;*/
 }
 .button {
 	 border: 50px solid black;
@@ -25,7 +25,6 @@ body{
 	justify-content: center;
 	background-color: #46D9E3;
 	border-bottom-style: solid;
-	/*font: Arial;*/
 }
 .hamburger{
 	margin: 20px;
