--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -40,12 +40,12 @@
 	<table style= "width: 100%">
 
 	<tr>
-		<td><center><a href="/noviceplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1>NOVICE 
-			(Click here if you do not practice yoga regularly)</h1></div></a></center></td>
+		<td><center><a href="/noviceplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1>NOVICE</h1> 
+			<h3 style= "color: black">(Click here if you do not practice yoga regularly)</h3></div></a></center></td>
 	</tr>
 	<tr>
-		<td><center><a href="/yogiplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1>YOGI
-			(Click here if you have a regular yoga practice)</h1></div></a></center></td>
+		<td><center><a href="/yogiplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1>YOGI</h1>
+			<h3 style= "color: black">(Click here if you have a regular yoga practice)</h3></div></a></center></td>
 	</tr>
 	</table>
 
