--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -36,7 +36,7 @@
 
 	<div>
 		<h1 id= "QBreath">How Long Is Your Breath Cycle? :</h1>
-		<h3 id = "EBreath" style = "color: #46D9E3;"> Breath cycle = inhale time (seconds) + exhale time (seconds)</h>
+		<p><font size= "5" id = "EBreath" style = "color: #46D9E3;"> Breath cycle = inhale time (seconds) + exhale time (seconds)</font></p>
 		<h1 id= "myBreath">
 		<form action="/action_page.php">
  		 	<select id = "time" name="time">
