--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -36,7 +36,7 @@
 
 	<div>
 		<h1 id= "QBreath">How Long Is Your Breath Cycle? :</h1>
-		<h5 id = "EBreath"> Breath cycle= inhale time (seconds)+ exhale time (seconds)</h5>
+		<p><font size= "5" id = "EBreath" style = "color: #46D9E3;"> Breath cycle = inhale time (seconds) + exhale time (seconds)</font></p>
 		<h1 id= "myBreath">
 		<form action="/action_page.php">
  		 	<select id = "time" name="time">
@@ -47,7 +47,7 @@
   			</select>
 		</form>
 		<br>
-		<p> Click play to begin your audio guided flow </p>
+		<p> <font size = "5"> Begin your audio guided flow and focus your gaze inward </font></p>
 	</div>
 
 	<div class= "myPlay">
