--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -21,11 +21,11 @@
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
-      			<li><a href= '/index' style= "color: black;">PROFILE</a></li>
-      			<li><a href= '/flow' style= "color: black;">FLOW</a></li>
-      			<li><a href= '/poses' style= "color: black;">POSES</a></li>
-      			<li><a href= '/help' style= "color: black;">HELP</a></li>
-      			<li><a href= '/' style= "color: black;">LOGOUT</a></li>
+      			<li class = "list"><a href= '/index' style= "color: black;">PROFILE</a></li>
+      			<li class = "list"><a href= '/flow' style= "color: black;">FLOW</a></li>
+      			<li class = "list"><a href= '/poses' style= "color: black;">POSES</a></li>
+      			<li class = "list"><a href= '/help' style= "color: black;">HELP</a></li>
+      			<li class = "list"><a href= '/' style= "color: black;">LOGOUT</a></li>
       		</ul>
       	</div>
 	</div>
@@ -40,7 +40,7 @@
 		<br>
 		<h2>WHAT IS A FLOW?</h2>
 		<h3 style = "color: #46D9E3;">
-		To start a workout, select FLOW from the menu and pick your level. If you are new to yoga, or to our app, we recommend you start with the novice flow. Once you are more experienced, feel free to try the yogi flow.
+		To start a workout, select FLOW from the menu and pick your level. If you are new to yoga, or to our app, we recommend you start with the novice flow. Once you are more experienced, feel free to try the yogi flow ॐ
 		</h3>
 		<br>
 		<h2>WHY IS THE BREATH CYCLE IMPORTANT?</h2>
@@ -50,7 +50,7 @@
 		<br>
 		<h2>WHAT IF I DON'T KNOW THE POSES?</h2>
 		<h3 style = "color: #46D9E3;">
-		If you need more guidance in the postures, consult the Poses pageॐ
+		If you need more guidance in the postures, consult the Poses page ॐ
 		</h3>
 	</div>
 	
