--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,11 +58,11 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
       			<div class= hammenu></div>
       			<div class= hammenu></div>
       			<ul class= "myMenu">
-	      			<li><a href= '/index' style= "color: black;">PROFILE</a></li>
-    	  			<li><a href= '/flow' style= "color: black;">FLOW</a></li>
-      				<li><a href= '/poses' style= "color: black;">POSES</a></li>
-      				<li id="lHelp"><a href= '/help' style= "color: black;">HELP</a></li>
-      				<li><a href= '/' style= "color: black;">LOGOUT</a></li> 
+	      			<li class = "list"><a href= '/index' style= "color: black;">PROFILE</a></li>
+    	  			<li class = "list"><a href= '/flow' style= "color: black;">FLOW</a></li>
+      				<li class = "list"><a href= '/poses' style= "color: black;">POSES</a></li>
+      				<li class="list"><a href= '/help' style= "color: black;">HELP</a></li>
+      				<li class = "list"><a href= '/' style= "color: black;">LOGOUT</a></li> 
       			</ul>
       		</div>
 		</div>
