--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
 	</div>
 	<br>	
 	<div class= "welcome">
-		<h4>Welcome to uFlow! Let our audio guided flows take your gaze inward.</h4>	
+		<h4 id= "tWelcome" >Welcome to uFlow! Let our audio guided flows take your gaze inward.</h4>	
 	</div>
 	<div class="form">
 		<label for="user">Name:</label>
