--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -24,11 +24,11 @@
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
-      			<li><a href= '/index' style= "color: black;">PROFILE</a></li>
-      			<li><a href='/flow' style= "color: black;">FLOW</a></li>
-      			<li><a href='/poses' style= "color: black;">POSES</a></li>
-      			<li><a href= '/help' style= "color: black;">HELP</a></li>
-      			<li><a href= '/' style= "color: black;">LOGOUT</a></li>
+      			<li class = "list"><a href= '/index' style= "color: black;">PROFILE</a></li>
+      			<li class = "list"><a href='/flow' style= "color: black;">FLOW</a></li>
+      			<li class = "list"><a href='/poses' style= "color: black;">POSES</a></li>
+      			<li class = "list"><a href= '/help' style= "color: black;">HELP</a></li>
+      			<li class = "list"><a href= '/' style= "color: black;">LOGOUT</a></li>
       		</ul>
       	</div>
 	</div>
@@ -47,7 +47,7 @@
   			</select>
 		</form>
 		<br>
-		<p> <font size = "5"> Begin your audio guided flow and focus your gaze inward </font></p>
+		<p id = "iBreath"> <font size = "5"> Begin your audio guided flow and focus your gaze inward: </font></p>
 	</div>
 
 	<div class= "myPlay">
