--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -18,10 +18,10 @@
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
-      			<li><a href= '/index'>PROFILE</a></li>
-      			<li><a href='/flow'>FLOW</a></li>
-      			<li><a href='/poses'>POSES</a></li>
-      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li class = "list"><a href= '/index'>PROFILE</a></li>
+      			<li class = "list"><a href='/flow'>FLOW</a></li>
+      			<li class = "list"><a href='/poses'>POSES</a></li>
+      			<li class = "list"><a href= '/information'>INFORMATION</a></li>
       		</ul>
       	</div>
 	</div>
