--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -24,11 +24,11 @@
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
-      			<li><a href= '/index' style= "color: black;">PROFILE</a></li>
-      			<li><a href='/flow' style= "color: black;">FLOW</a></li>
-      			<li><a href='/poses' style= "color: black;">POSES</a></li>
-      			<li><a href= '/help' style= "color: black;">HELP</a></li>
-      			<li><a href= '/' style= "color: black;">LOGOUT</a></li>
+      			<li class = "list"><a href= '/index' style= "color: black;">PROFILE</a></li>
+      			<li class = "list"><a href='/flow' style= "color: black;">FLOW</a></li>
+      			<li class = "list"><a href='/poses' style= "color: black;">POSES</a></li>
+      			<li class = "list"><a href= '/help' style= "color: black;">HELP</a></li>
+      			<li class = "list"><a href= '/' style= "color: black;">LOGOUT</a></li>
       			<!-- <li><a href='/vnoviceplay'>vnoviceplay</a></li>
       			<li><a href='/vyogiplay'>vyogiplay</a></li> -->
 
@@ -40,11 +40,11 @@
 	<table style= "width: 100%">
 
 	<tr>
-		<td><center><a href="/noviceplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1>NOVICE</h1> 
+		<td><center><a href="/noviceplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1 id = "novicelink">NOVICE</h1> 
 			<h3 style= "color: black">(Click here if you do not practice yoga regularly)</h3></div></a></center></td>
 	</tr>
 	<tr>
-		<td><center><a href="/yogiplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1>YOGI</h1>
+		<td><center><a href="/yogiplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%; color: #46D9E3;"><h1 id = "yogilink">YOGI</h1>
 			<h3 style= "color: black">(Click here if you have a regular yoga practice)</h3></div></a></center></td>
 	</tr>
 	</table>
