--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -87,8 +87,11 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 		<h2 style= "color: #46D9E3;">FLOW HISTORY</h2>
 	</div>
 
-	<div class ="calender">
-		<img src="/calender.jpg" alt="Calender" width=320px height=300px>
+	<div class ="statistics">
+		<!-- <img src="/calender.jpg" alt="Calender" width=320px height=300px> -->
+		<img src="/statYoga.jpg" alt="Statistics" width=370px height=340px>
+		<img src="/statFlow.jpg" alt="Statistics" width=370px height=340px>
+		<img src="/statBreath.jpg" alt="Statistics" width=370px height=340px>
 	</div>
 
 	<!-- <div>
