--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -30,12 +30,16 @@
       	</div>
 	</div>
 	</header>
-
 	{{#each poses}}
-	<h6><center>{{name}}</center></h6>
-	<h2 style= "color: #46D9E3;"><center>{{sanskrit}}</center></h2>
-	<hr><center><img width= "200" height= "200" src= "{{imgURL}}"></center></hr>
-	<hr><center><iframe width="300" height="315" src="{{videoURL}}"></iframe></center></hr>
+	<div class = "wordPoses">
+		<h6><center>{{name}}</center></h6>
+		<h2 style= "color: #46D9E3;"><center>{{sanskrit}}</center></h2>
+	</div>
+	<div class = "mediaPoses">
+		<!-- <h2 style= "color: #46D9E3;"><center>{{sanskrit}}</center></h2> -->
+		<hr><center><img width= "200" height= "200" src= "{{imgURL}}"></center></hr>
+		<hr><center><iframe width="300" height="315" src="{{videoURL}}"></iframe></center></hr>
+	</div>
 	{{/each}}
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
 	
@@ -51,6 +55,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/ham.js"></script>
+	<script src="js/poses.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
