gave value to boxes in play pages

--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -49,7 +49,7 @@
 		<button class="bBreath">Calculate</button> =
 		</div>
 		<div class = "inexForm">
-		<input type="text" class="form-control" id="breath" placeholder="Breath Cycle(s)">
+		<input type="text" class="form-control" id="breath" placeholder="Breath Cycle(s)" value = "8">
 		</div>
 		</font></p>
 		<h1 id= "myBreath">
