images on profile page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -89,9 +89,9 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 	<div class ="statistics">
 		<!-- <img src="/calender.jpg" alt="Calender" width=320px height=300px> -->
-		<img src="/statYoga.jpg" alt="Statistics" width=370px height=340px>
-		<img src="/statFlow.jpg" alt="Statistics" width=370px height=340px>
-		<img src="/statBreath.jpg" alt="Statistics" width=370px height=340px>
+		<img src="/statYoga.JPG" alt="Statistics" width=370px height=340px>
+		<img src="/statFlow.JPG" alt="Statistics" width=370px height=340px>
+		<img src="/statBreath.JPG" alt="Statistics" width=370px height=340px>
 	</div>
 
 	<!-- <div>
