removed = sign from both play pages

--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -43,7 +43,7 @@
 		</div>
 		<div class = "inexForm">
 		<input type="text" class="form-control" id="exhale" placeholder="Exhale time(s)">
-		<button class="bBreath">Calculate</button> =
+		<button class="bBreath">Calculate</button>
 		</div>
 		<div class = "inexForm">
 		<input type="text" class="form-control" id="breath" placeholder="Breath Cycle(s)" value = "10">
